--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,18 @@
 		</dependency>
 	</dependencies>
 
+	<dependencyManagement>
+	  <dependencies>
+	    <dependency>
+	      <groupId>com.azure</groupId>
+	      <artifactId>azure-sdk-bom</artifactId>
+	      <type>pom</type>
+	      <scope>import</scope>
+	    </dependency>
+	  </dependencies>
+	</dependencyManagement>
+
+
 	<build>
 		<plugins>
 			<plugin>
