--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,7 @@
 	    <dependency>
 	      <groupId>com.azure</groupId>
 	      <artifactId>azure-sdk-bom</artifactId>
+		    <version>1.2.28</version>
 	      <type>pom</type>
 	      <scope>import</scope>
 	    </dependency>
